# web/config/openapi.json
@@ -1,209 +1,1 @@
-{
-  "openapi": "3.0.1",
-  "info": {
-    "title": "OpenAPI definition",
-    "version": "v0"
-  },
-  "servers": [
-    {
-      "url": "http://localhost:8101/api",
-      "description": "Generated server url"
-    }
-  ],
-  "paths": {
-    "/login/oauth": {
-      "get": {
-        "tags": [
-          "user-controller"
-        ],
-        "operationId": "login",
-        "parameters": [
-          {
-            "name": "user",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/OAuth2User"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseResponseUser"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/login/get_developer": {
-      "get": {
-        "tags": [
-          "user-controller"
-        ],
-        "operationId": "get_developer",
-        "parameters": [
-          {
-            "name": "login",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseResponseUser"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/login/currentUser": {
-      "get": {
-        "tags": [
-          "user-controller"
-        ],
-        "operationId": "currentUser",
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/BaseResponseUser"
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "GrantedAuthority": {
-        "type": "object",
-        "properties": {
-          "authority": {
-            "type": "string"
-          }
-        }
-      },
-      "OAuth2User": {
-        "type": "object",
-        "properties": {
-          "attributes": {
-            "type": "object",
-            "additionalProperties": {
-              "type": "object"
-            }
-          },
-          "authorities": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/GrantedAuthority"
-            }
-          },
-          "name": {
-            "type": "string"
-          }
-        }
-      },
-      "BaseResponseUser": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "data": {
-            "$ref": "#/components/schemas/User"
-          },
-          "message": {
-            "type": "string"
-          }
-        }
-      },
-      "User": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "login": {
-            "type": "string"
-          },
-          "nodeid": {
-            "type": "string"
-          },
-          "avatarurl": {
-            "type": "string"
-          },
-          "accounttype": {
-            "type": "string"
-          },
-          "accountname": {
-            "type": "string"
-          },
-          "company": {
-            "type": "string"
-          },
-          "blog": {
-            "type": "string"
-          },
-          "location": {
-            "type": "string"
-          },
-          "email": {
-            "type": "string"
-          },
-          "hireable": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "publicRepos": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "publicGists": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "accountfollowers": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "accountfollowing": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "createtime": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "updatetime": {
-            "type": "string",
-            "format": "date-time"
-          }
-        }
-      }
-    }
-  },
-  "x-openapi": {
-    "x-markdownFiles": []
-  }
-}
+{"openapi":"3.0.1","info":{"title":"OpenAPI definition","version":"v0"},"servers":[{"url":"http://localhost:8101/api","description":"Generated server url"}],"paths":{"/login/oauth":{"get":{"tags":["user-controller"],"operationId":"login","parameters":[{"name":"code","in":"query","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponseUserLoginVO"}}}}}}},"/login/getDeveloper":{"get":{"tags":["user-controller"],"operationId":"getDeveloper","parameters":[{"name":"login","in":"query","required":true,"schema":{"type":"string"}},{"name":"token","in":"query","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponseUser"}}}}}}},"/login/currentUser":{"get":{"tags":["user-controller"],"operationId":"currentUser","parameters":[{"name":"Authorization","in":"header","required":true,"schema":{"type":"string"}}],"responses":{"200":{"description":"OK","content":{"*/*":{"schema":{"$ref":"#/components/schemas/BaseResponseUser"}}}}}}}},"components":{"schemas":{"BaseResponseUserLoginVO":{"type":"object","properties":{"code":{"type":"integer","format":"int32"},"data":{"$ref":"#/components/schemas/UserLoginVO"},"message":{"type":"string"}}},"User":{"type":"object","properties":{"id":{"type":"integer","format":"int64"},"login":{"type":"string"},"nodeid":{"type":"string"},"avatarurl":{"type":"string"},"accounttype":{"type":"string"},"accountname":{"type":"string"},"company":{"type":"string"},"blog":{"type":"string"},"location":{"type":"string"},"email":{"type":"string"},"hireable":{"type":"integer","format":"int32"},"publicRepos":{"type":"integer","format":"int32"},"publicGists":{"type":"integer","format":"int32"},"accountfollowers":{"type":"integer","format":"int32"},"accountfollowing":{"type":"integer","format":"int32"},"createtime":{"type":"string","format":"date-time"},"updatetime":{"type":"string","format":"date-time"}}},"UserLoginVO":{"type":"object","properties":{"user":{"$ref":"#/components/schemas/User"},"token":{"type":"string"}}},"BaseResponseUser":{"type":"object","properties":{"code":{"type":"integer","format":"int32"},"data":{"$ref":"#/components/schemas/User"},"message":{"type":"string"}}}}},"x-openapi":{"x-markdownFiles":[]}}
